# desafio-devops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CD.yaml  CI.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.tf  provider.tf  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: CI.yaml
docs/: index.html
src/: app.py
terraform/homolog/: backend.homolog.tf  main.tf  terraform.tfstate  terraform.tfstate.backup
terraform/prod/: backend.prod.tf  main.tf
